# chatbot-akademik

./: README.md  main.py  pnpm-lock.yaml
.github/workflows/: black.yaml  prettier.yaml
app/conversation/: model.py
app/user/: model.py
backend/: .env.example  .gitignore  Dockerfile  README.md  README.txt  alembic.ini  docker-compose.yaml  entrypoint.sh  example.env  example.env.prod  exception.py  main.py  manager.py  requirements-local.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 10e015470588_feedback.py  72833c8b9ac1_initial_migration.py  (+1 more)
backend/config/: database.py
backend/exceptions/: custom_exceptions.py  handlers.py
backend/helper/: jwt.py  role.py
backend/middleware/: jwt.py
backend/nginx/: Dockerfile  default.conf  nginx.conf
config/: database.py
frontend/: .env  .gitignore  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/src/: Api.ts  middleware.ts
libs/: Dockerfile  README.md
libs/lang-engine/: .env.example  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements-docs.txt
libs/lang-engine/demos/: 02-chatbot-attempt-002-rag.py  02-chatbot-attempt-003-advisor.py  02-chatbot-attempt-004-empathetic.py
libs/lang-engine/docs/: conf.py  index.rst
libs/lang-engine/docs/modules/: agents.rst  core.rst
libs/lang-engine/src/lang_engine/: __main__.py  cli.py  config.py
libs/lang-engine/src/lang_engine/agents/: __init__.py
libs/lang-engine/src/lang_engine/agents/advisor/: __init__.py  agent.py  context.py  prompts.py
libs/lang-engine/src/lang_engine/agents/answerer/: __init__.py  agent.py  context.py  prompts.py
libs/lang-engine/src/lang_engine/agents/rag/: agent.py  context.py  prompts.py
libs/lang-engine/src/lang_engine/core/: base.py
libs/lang-engine/tests/: __init__.py
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/linux/: CMakeLists.txt  my_application.cc
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
mobile/windows/: CMakeLists.txt
src/api/: backend-schema.d.ts
(+96 files in other folders)
